# crm

./: .gitignore  README.md  docker-compose.yml  pyproject.toml
.github/actions/run_unit_tests/: action.yml
.github/workflows/: all.build.yml  docker-build.yml  docker-image.yml  unit-tests.yml
crm-frontend/: package-lock.json  package.json  vite.config.js
crm-frontend/backend/repairs/: models.py  serializers.py  urls.py  views.py
crm-frontend/src/: App.jsx  api.js  index.js
crm-frontend/src/components/: BudgetView.jsx  CarList.jsx  ErrorBoundary.jsx  PartList.jsx  RepairList.jsx  Sidebar.jsx
ops/: Dockerfile
src/: settings.py  urls.py
src/app/accounting/: apps.py  models.py  urls.py  views.py
src/app/accounting/migrations/: 0001_initial.py
src/app/cars/: apps.py  models.py  views.py
src/app/cars/migrations/: 0001_initial.py
src/app/customers/: apps.py  models.py  serializers.py  tests.py  urls.py  views.py
src/app/customers/migrations/: 0001_initial.py  0002_customer_budget.py
src/app/tech/: apps.py  models.py  serializers.py  tests.py  urls.py  views.py
src/app/tech/migrations/: 0001_initial.py  0002_delete_customer_car_customer.py  0003_cartype_remove_car_make_remove_car_model_carpart_and_more.py  0004_car_state_alter_car_year.py  0005_carpart_in_stock_repair.py  0006_remove_repair_finished_at_remove_repair_started_at.py  0007_alter_carpart_in_stock.py  0008_carpart_price_repair_expense.py  0009_alter_car_state.py  0010_repair_customer.py
src/tests/: test_customer.py  test_tech.py
